--- a/SpeedifyCliWrapper/Modules/Partials/Adapter.partial.tt
+++ b/SpeedifyCliWrapper/Modules/Partials/Adapter.partial.tt
@@ -1,6 +1,6 @@
 ﻿<#@ template debug="false" hostspecific="false" language="C#" #>
 <#@ assembly name="System.Core" #>
-<#@ assembly name="$(SolutionDir)\SpeedifyCliWrapper\bin\Debug\net45\SpeedifyCliWrapper.dll" #>
+<#@ assembly name="$(SolutionDir)\SpeedifyCliWrapper\bin\Debug\net462\SpeedifyCliWrapper.dll" #>
 <#@ import namespace="System.Linq" #>
 <#@ import namespace="System.Text" #>
 <#@ import namespace="System.Collections.Generic" #>
@@ -31,9 +31,9 @@ namespace SpeedifyCliWrapper.ReturnTypes
 		
 		var parameters = method.GetParameters().ToArray();
 #>
-		public <#= method.ReturnType.Name#> <#= method.Name#> (<#for(int i = 0; i < parameters.Length ; i++) { var typeName = compiler.GetTypeOutput(new CodeTypeReference(parameters[i].ParameterType)); #><#= typeName.Substring(typeName.LastIndexOf(".") + 1) #> <#= parameters[i].Name #><# if (parameters[i].HasDefaultValue && parameters[i].DefaultValue != null) { #> = <#= parameters[i].DefaultValue #><# } if (i != parameters.Length - 1) { Write(", "); }}#>)
+		public <#= method.ReturnType.Name#> <#= method.Name#>(<#for(int i = 1; i < parameters.Length ; i++) { var typeName = compiler.GetTypeOutput(new CodeTypeReference(parameters[i].ParameterType)); #><#= typeName.Substring(typeName.LastIndexOf(".") + 1) #> <#= parameters[i].Name #><# if (parameters[i].HasDefaultValue && parameters[i].DefaultValue != null) { #> = <#= parameters[i].DefaultValue #><# } if (i != parameters.Length - 1) { Write(", "); }}#>)
 		{
-			return this._wrapper.Adapter.<#=method.Name#>(<#for(int i = 0; i < parameters.Length ; i++) { #><#= parameters[i].Name #><# if (i != parameters.Length - 1) { Write(", "); }}#>);
+			return this._wrapper.Adapter.<#=method.Name#>(this, <#for(int i = 1; i < parameters.Length ; i++) { #><#= parameters[i].Name #><# if (i != parameters.Length - 1) { Write(", "); }}#>);
 		}
 
 <#}#>
